--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,20 +1,21 @@
 @font-face {
     font-family: "Roboto";
-    src: url("/app/fonts/400/Roboto-Regular.woff2") format("woff2"),
-           url("/app/fonts/400/Roboto-Regular.woff") format("woff");
-}
-@font-face {
-    font-family: "Roboto";
     src: url("/app/fonts/700/Roboto-Bold.woff2") format("woff2"),
           url("/app/fonts/700/Roboto-Bold.woff") format("woff");
 }
+@font-face {
+    font-family: "Roboto";
+    src: url("/app/fonts/400/Roboto-Regular.woff2") format("woff2"),
+           url("/app/fonts/400/Roboto-Regular.woff") format("woff");
+}
+
 
 
 $gray: #546e7a;
 $green: #8bc34a;
 $red: #e74c3c; 
 $black-blue: #263238;
-html, ::before, ::after {
+html, ::before, ::after, input {
     box-sizing: border-box;
 }
 body {
@@ -83,3 +84,55 @@ h1,h2,h3,h4,h5,h6,ul,ol,li,p,a {
     color: #fff;
     margin-right: 35px;
 }
+
+// --- search ---
+.search {
+    background: url(../images/dist/search-bg.jpg) no-repeat;
+    background-size: cover;
+    padding: 150px 0 166px;
+    text-align: center;
+}
+.search__inner {
+    color: #fff;
+}
+.search__inner-title {
+    font-size: 48px;
+    margin-bottom: 18px;
+}
+.search__inner-text {
+    margin-bottom: 45px;
+    font-size: 20px;
+}
+.search__inner-form {
+    max-width: 670px;
+    margin: 0 auto;
+}
+.form {
+    position: relative;
+}
+.form__input {
+    width: 100%;
+    height: 56px;
+    border-radius: 5px;
+    border: none;
+    padding-left: 24px;
+    padding-right: 70px;
+    color: $gray;
+    box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+}
+.form__input::placeholder {
+    color: $gray;
+    opacity: 0.8;
+}
+.form__btn {
+    border: none;
+    background: transparent;
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.form__btn:focus {
+    outline: none;
+}
+  
