--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -298,4 +298,36 @@ h1,h2,h3,h4,h5,h6,ul,ol,li,p,a {
     cursor: pointer;
 }
   
-  
+// --- Slider ---
+.slider {
+    margin: 100px 0 120px;
+}
+.slider__title {
+    text-align: center;
+    margin-bottom: 50px;
+}
+.slick-track {
+    display: flex;
+    justify-content: space-between;
+}
+.slick-dots {
+    display: flex;
+    justify-content: center;
+}
+.slick-dots li {
+    margin-right: 6px;
+}
+
+.slick-dots li button{
+    border: none;
+    font-size: 0px;
+    height: 16px;
+    width: 16px;
+    background: #e8e8e8;
+    border-radius: 50%;
+    outline: none;
+    cursor: pointer;
+}
+.slick-dots .slick-active button {
+    background: $green;
+}
